# gpt-bedrock-openai-benchmark

./: .env.example  .gitignore  README.md  pyproject.toml
blog/: index.html
result/: gsm8k_accuracy_main_runs.json  gsm8k_accuracy_main_runs.md  openai_eval_cost_20260608T131641Z.json  openai_eval_cost_20260608T131641Z.md  openai_responses_latency_20260608T151100Z.jsonl  openai_responses_latency_20260608T151100Z.md  openai_responses_latency_20260608T154416Z.jsonl  openai_responses_latency_20260608T154416Z.md  openai_responses_latency_20260609T075448Z.jsonl  openai_responses_latency_20260609T075448Z.md  openai_responses_latency_20260609T085849Z.jsonl  openai_responses_latency_20260609T085849Z.md  openai_responses_latency_20260609T090304Z.jsonl  openai_responses_latency_20260609T090304Z.md  openai_responses_latency_20260609T121438Z.jsonl  openai_responses_latency_20260609T121438Z.md  openai_responses_latency_20260609T143216Z.jsonl  openai_responses_latency_20260609T143216Z.md  openai_responses_latency_20260610T071520Z.jsonl  openai_responses_latency_20260610T071520Z.md  openai_responses_latency_20260610T071520Z_summary.json  openai_responses_latency_20260610T083624Z.md  openai_responses_latency_20260610T083624Z_summary.json
result/gsm8k-gpt55-high/: gsm8k_accuracy_summary.json  gsm8k_accuracy_summary.md  openai_responses_latency_20260610T095751Z.jsonl  (+2 more)
scripts/: benchmark_openai_latency.py  estimate_openai_eval_cost.py  ping_bedrock.py  score_gsm8k_accuracy.py
tests/: test_openai_eval_cost_estimator.py  test_openai_latency_benchmark.py  test_score_gsm8k_accuracy.py
(+62 files in other folders)
